code25_all/scala/17100523.txt
start-script-name
build.sbt
import com.typesafe.sbt.SbtStartScript
seq(SbtStartScript.startScriptForClassesSettings: _*)

start-script-name
startScriptFile
inspect
[ctdrest] $ inspect uses start-script-name
[info]
[info]  compile:start-script-for-jar
[info]  compile:start-script-not-defined
[ctdrest] $ inspect definitions start-script-name
[info]
[info]  *:start-script-name
[ctdrest] $ inspect tree start-script-name
[info] *:start-script-name = target/start
[info]   +-*:target = target
[info]     +-*:base-directory = /Users/amack/Coding/ctdrest
[info]       +-*:this-project = Project(id: CTDRestful, base: /Users/amack/Coding/ctdrest, aggreg..
[info]

sbt
[ctdrest] $ set startScriptFile := "bar"
<set>:1: error: not found: value startScriptFile
startScriptFile := "bar"
^
<set>:1: error: reassignment to val
startScriptFile := "bar"
            ^
[error] Type error in expression

